--- a/pom.xml
+++ b/pom.xml
@@ -122,7 +122,7 @@
 						<!--<configuration>-->
 							<!--<transformers>-->
 								<!--<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">-->
-									<!--<mainClass>io.dragonsbane.neurocog.DApp</mainClass>-->
+									<!--<mainClass>io.dragonsbane.neurocog.NeurocogDAppocogDApp</mainClass>-->
 								<!--</transformer>-->
 							<!--</transformers>-->
 						<!--</configuration>-->
@@ -135,7 +135,7 @@
 				<version>8.8.3</version>
 				<configuration>
 					<vendor>Dragonsbane</vendor>
-					<mainClass>io.dragonsbane.neurocog.DApp</mainClass>
+					<mainClass>io.dragonsbane.neurocog.NeurocogDApp</mainClass>
 				</configuration>
 			</plugin>
 		</plugins>
