--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,11 @@
 			<artifactId>core</artifactId>
 			<version>0.2.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>io.onemfive</groupId>
+			<artifactId>neo4j</artifactId>
+			<version>0.5.2-SNAPSHOT</version>
+		</dependency>
 		<!-- Test -->
 		<dependency>
 			<groupId>junit</groupId>
